--- a/css/mobile.css
+++ b/css/mobile.css
@@ -44,9 +44,16 @@
 /* Showcase */
 .showcase-card {
   width: 80vw;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
+.showcase-card h3 {
+  font-size: 1.6rem;
+}
+
+.showcase-card p {
+  font-size: 0.9rem;
+}
 /* Card */
 .cards {
   width: 100%;
